# pulumi-ibmcloud

./: .ci-mgmt.yaml  .golangci.yml  BUILD_STATUS.md  CLAUDE.md  DEVELOPMENT.md  EXAMPLES_NEXT_STEPS.md  GITHUB_ACTIONS.md  Makefile  QUICKSTART.md  README.md  RELEASE_GUIDE.md  SDK_GENERATION_COMPLETE.md
.claude/: settings.local.json
.github/workflows/: resync-build.yml  simple-build.yml  simple-release.yml
examples/: EXAMPLES.md
examples/basic-go/: Pulumi.yaml  README.md  main.go
examples/basic-py/: README.md  __main__.py  (+1 more)
provider/: go.mod  go.sum  resources.go
sdk/: go.mod
sdk/python/: pyproject.toml
sdk/python/pulumi_ibmcloud/: README.md  __init__.py  app.py  app_config_collection.py  app_config_environment.py  app_config_feature.py  app_config_integration_en.py  app_config_integration_kms.py  app_config_property.py  app_config_segment.py  app_config_snapshot.py  app_domain_private.py  app_domain_shared.py  app_route.py  appid_action_url.py  appid_apm.py  appid_application.py  appid_application_roles.py  appid_application_scopes.py  appid_audit_status.py  appid_cloud_directory_template.py  appid_cloud_directory_user.py  appid_idp_cloud_directory.py  appid_idp_custom.py  appid_idp_facebook.py  appid_idp_google.py  appid_idp_saml.py  appid_languages.py  appid_mfa.py  appid_mfa_channel.py  appid_password_regex.py  appid_redirect_urls.py  appid_role.py  appid_theme_color.py  appid_theme_text.py  appid_token_config.py  appid_user_roles.py  atracker_route.py  atracker_settings.py  atracker_target.py  (+1358 more)
sdk/python/pulumi_ibmcloud/config/: __init__.pyi  vars.py
(+2495 files in other folders)
