[project]
  name = "pulumi_ibmcloud"
  description = "A Pulumi package for creating and managing IBM Cloud resources."
  dependencies = ["parver>=0.2.1", "pulumi>=3.165.0,<4.0.0", "semver>=2.8.1", "typing-extensions>=4.11,<5; python_version < \"3.11\""]
  keywords = ["ibmcloud", "ibm", "category/cloud"]
  readme = "README.md"
  requires-python = ">=3.9"
  version = "1.0.0a0+dev"
  [project.license]
    text = "Apache-2.0"
  [project.urls]
    Homepage = "https://github.com/mapt-oss/pulumi-ibmcloud"
    Repository = "https://github.com/mapt-oss/pulumi-ibmcloud"

[build-system]
  requires = ["setuptools>=61.0"]
  build-backend = "setuptools.build_meta"

[tool]
  [tool.setuptools]
    [tool.setuptools.package-data]
      pulumi_ibmcloud = ["py.typed", "pulumi-plugin.json"]
